# platoanalyze-verification

./: .gitattributes  AddVerificationTest.cmake  CMakeLists.txt  README.md
Assemblies/CompliantContact/: CMakeLists.txt  displacement_compare.py  displacement_compare_vtk.py  displacement_display.py  displacement_plot.gnu  index.dox  two_block_tensile.exo  two_block_tensile.jou  two_block_tensile.xml
Assemblies/MPCs/: CMakeLists.txt  displacement_compare.py  displacement_display.py  displacement_plot.gnu  index.dox  two_block_tensile.exo  two_block_tensile.jou
InherentStrain/2LayerNormal/: CMakeLists.txt  bilayer.jou  bilayer.xml  dispz_compare.py  dispz_compare_vtk.py  dispz_display.py  dispz_plot.gnu  index.dox
InherentStrain/2LayerShear/: .logamgx  CMakeLists.txt  amgx.json  bilayer.jou  bilayer.xml  dispz_compare.py  dispz_compare_vtk.py  dispz_display.py  dispz_display_vtk.py  dispz_plot.gnu  index.dox
InherentStrain/4LayerNormal/: 4layer.jou  4layer.xml  CMakeLists.txt  dispz_compare.py  dispz_compare_vtk.py  dispz_display.py  dispz_display_vtk.py  dispz_plot.gnu  index.dox
LinearThermal/: CMakeLists.txt  block.jou  block.xml  compare.py  index.dox  plot.gnu  solution.py
MPCs/TensileBar/: CMakeLists.txt  displacement_compare.py  displacement_compare_vtk.py  displacement_display.py  displacement_plot.gnu  index.dox  two_block_tensile.exo  two_block_tensile.jou  two_block_tensile.xml
Mechanical/BodyLoads/: .index.dox.swp  CMakeLists.txt  block.jou  block.xml  displacement_compare.py  displacement_display.py  displacement_display_vtk.py  displacement_plot.gnu  index.dox
Mechanical/BodyLoads_Hex27/: CMakeLists.txt  block.exo  block.jou  cubit03.jou  displacement_compare.py  displacement_compare_vtk.py  displacement_display.py  displacement_plot.gnu  index.dox
Mechanical/BodyLoads_Hex8/: CMakeLists.txt  amgx.json  block.exo  block.jou  cubit01.jou  cubit02.jou  displacement_display.py  displacement_plot.gnu  index.dox
Mechanical/BodyLoads_Tet10/: CMakeLists.txt  block.exo  block.jou  displacement_compare_vtk.py  displacement_display.py  displacement_plot.gnu  index.dox
Mechanical/BodyLoads_Tet4/: CMakeLists.txt  block.exo  block.jou  block.xml  displacement_compare.py  displacement_display.py  displacement_display_vtk.py  displacement_plot.gnu  index.dox
Mechanical/MassProperties/: CMakeLists.txt  analyzeInputCGx.xml  analyzeInputCGy.xml  analyzeInputCGz.xml  analyzeInputIxx.xml  analyzeInputIxy.xml  analyzeInputIxz.xml  analyzeInputIyy.xml  analyzeInputIyz.xml  analyzeInputIzz.xml  analyzeInputMass.xml  analyzeOperations.xml  cylinder.jou  massProperties_compare.py
Mechanical/TransientDynamicsAForm/: 1dbar.exo  1dbar.jou  1dbar.xml  CMakeLists.txt  displacement_compare.py  displacement_compare_vtk.py  displacement_display.py  displacement_display_vtk.py  displacement_plot.gnu  index.dox
Mechanical/TransientDynamicsAFormExplicit/: 1dbar.exo  1dbar.jou  1dbar.xml  CMakeLists.txt  displacement_compare.py  displacement_compare_vtk.py
Mechanical/TransientDynamicsImp/: 1dbar.exo  1dbar.xml  CMakeLists.txt  displacement_compare.py  displacement_compare_vtk.py  displacement_display.py  displacement_display_vtk.py  displacement_plot.gnu  index.dox
NonlinearThermal/: CMakeLists.txt  block.exo  block.jou  block.xml  compare.py  index.dox  solution.py
Thermal/LinearThermal/: CMakeLists.txt  block.jou  block.xml  index.dox  temperature_compare.py  temperature_compare_vtk.py  temperature_display.py  temperature_plot.gnu
Thermal/NonlinearThermal/: CMakeLists.txt  amgx.json  block.jou  block.xml  index.dox  layout.py  plot.gnu  temperature_compare.py  temperature_compare_vtk.py  temperature_display.py  temperature_plot.gnu
Thermomechanics/NonlinearBar/: 1dbar.exo  1dbar.jou  1dbar.xml  CMakeLists.txt  amgx.json  compare.py  displacement_compare.py  displacement_compare_vtk.py  displacement_display.py  displacement_display_vtk.py  displacement_plot.gnu  index.dox  plot.gnu  solution.py  temperature_compare.py  temperature_compare_vtk.py  temperature_display.py  temperature_display_vtk.py  temperature_plot.gnu
Thermomechanics/StaticNonlinearBar/: 1dbar.jou  1dbar.xml  CMakeLists.txt  amgx.json  displacement_compare.py  displacement_compare_vtk.py  displacement_display.py  displacement_display_vtk.py  displacement_plot.gnu  index.dox  plot.gnu  solution.py  temperature_compare.py  temperature_compare_vtk.py  temperature_display.py  temperature_plot.gnu
tools/: doc.cmake  index.dox  line.py  line_vtk.py  verification.doxyfile  verification_utils.py  verify.cmake
